repair all button

--- a/src/templates/actors/ship-sheet.html
+++ b/src/templates/actors/ship-sheet.html
@@ -217,6 +217,11 @@
           <a><i class="fas fa-heart-broken  fa-2x failure-button"></i></a>
           {{localize 'swnr.sheet.ship.system-failure'}}
         </div>
+
+        <div class="cost flex flex-col items-center ">
+          <a><i class="fas fa-tools  fa-2x repair-button"></i></a>
+          {{localize 'swnr.sheet.ship.repair-all'}}
+        </div>
         <!-- end Grid div for header -->
       </div>
 
