--- a/src/templates/actors/fragments/vehicle-weapon-table.html
+++ b/src/templates/actors/fragments/vehicle-weapon-table.html
@@ -33,6 +33,10 @@
             <i class="fas fa-retweet"></i>
           </a>
           {{/if}}
+          <a class="item-control item-toggle-jury  {{#unless item.data.data.juryRigged}}item-working{{/unless}}"
+            title='{{localize 'swnr.sheet.jury-rig'}}'>
+            <i class="fas fa-tape {{#unless item.data.data.juryRigged}}item-working{{/unless}} "></i>
+          </a>
           <a class="item-control item-toggle-broken  {{#unless item.data.data.broken}}item-working{{/unless}}"
             title='{{localize 'swnr.sheet.break-item'}}'>
             <i class="fas fa-heart-broken {{#unless item.data.data.broken}}item-working{{/unless}}"></i>
