foci level, add foci button, small fix on repair chat msg

--- a/src/templates/actors/character-sheet.html
+++ b/src/templates/actors/character-sheet.html
@@ -769,22 +769,28 @@
                 <div><!-- table-->
                   <li class="item-titles flexrow">
                     <!--<div class="item-caret"><i class="fas fa-caret-down"></i></div>-->
-                    <div class="item-name">{{localize 'swnr.sheet.tabs.foci'}} </div>
-                    <div class="item-effect">{{localize 'swnr.sheet.description'}}</div>
+                    <div class="item-name flex2 pr-2">{{localize 'swnr.sheet.tabs.foci'}} </div>
+                    <div class="item-effect flex2">{{localize 'swnr.sheet.description'}}</div>
+                    <div class="item-effect w-8 flex-shrink">{{localize 'swnr.sheet.level'}}</div>
                     <div class="item-controls w-20 text-right">
+                      <a class="item-control item-create text-gray-100 hover:text-green-400 transition-colors"
+                        title="{{localize 'swnr.sheet.add-item'}}" data-item-type="focus" data-item-name="Focus">
+                        <i class="fas fa-plus"></i>
+                      </a> 
                     </div>
                   </li>
                   <ol class="item-list">
                     {{#each itemTypes.focus as |item id|}}
                     <li class="item-entry">
                       <div class="item flexrow" data-item-id="{{item.id}}">
-                        <div class="item-name item-click item-rollable flexrow">
+                        <div class="item-name item-click item-rollable flexrow flex2 pr-2">
                           <div class="item-image" style="background-image: url({{item.img}})"><a></a></div>
                           <a>{{item.name}}</a>
                         </div>
-                        <div clas="">
-                          {{trim item.data.data.description 60}}
+                        <div class="flex2">
+                          {{trim item.data.data.description 30}}
                         </div>
+                        <div class="flex-shrink w-8">{{item.data.data.level}}</div>
                         <div class="item-controls w-20  text-right">
                           <a class="item-control item-edit text-gray-600 hover:text-purple-800 transition-colors" title='{{localize 'swnr.sheet.edit-item'}}'>
                             <i class="fas fa-edit"></i></a>
