--- a/src/templates/items/focus-sheet.html
+++ b/src/templates/items/focus-sheet.html
@@ -1,6 +1,15 @@
 <form class="{{cssClass}} -m-2 p-2 bg-gray-200">
   {{> "systems/swnr/templates/items/fragments/desc.html"}}
-  <div class="border border-black rounded-md bg-gray-300 mb-2">
+  {{localize 'swnr.foci.level'}}: <select class="px-1 text-black border border-gray-800 bg-gray-400 bg-opacity-75 rounded-md" name="data.level">
+        {{#select data.data.level}}
+        <option value=""></option>
+        <option value="1">1</option>
+        <option value="2">2</option>
+        {{/select}}
+      </select>
+
+  <div class="pt-1 mt-1 border border-black rounded-md bg-gray-300 mb-2">
+
     <h3 class="text-base p-1">{{localize 'swnr.foci.level1'}}</h3>
     <div class="p-1 border-t border-black">
       {{editor content=data.data.level1 target="data.level1" button=true owner=owner
