NPC ships. adding CP and crewSkill

--- a/src/templates/actors/fragments/vehicle-mods.html
+++ b/src/templates/actors/fragments/vehicle-mods.html
@@ -1,3 +1,17 @@
+<div class="grid grid-cols-3">
+  <div class="flex flexrow">
+    <div class="justify-center py-0.5" style="text-align:right;">
+      {{localize 'swnr.sheet.command-points'}}:
+    </div>
+    <div>
+      <input
+        class="w-10 text-center px-1.5 py-0.5 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+        type="number" min="0" name="data.commandPoints" value="{{actor.data.data.commandPoints}}" />
+    </div>
+  </div>
+  <div></div>
+  <div></div>
+</div>
 <div class="grid grid-cols-2">
   <div class="gap-2">
     <!-- Left Col -->
