--- a/src/templates/actors/ship-sheet.html
+++ b/src/templates/actors/ship-sheet.html
@@ -531,6 +531,27 @@
                   <label>{{localize 'swnr.sheet.ship.make-payment'}}</label>
                 </div>
               </div>
+
+              <div class="flex flexrow gap-8">
+                <!--operatingCosts-->
+                <div class="operatingCost flex flex-col items-center text-center">
+                  <input
+                    class="w-24 text-center px-1.5 py-1.5 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+                    type="number" min="0" name="data.operatingCost" value="{{actor.data.data.operatingCost}}" />
+                  <label>{{localize 'swnr.sheet.ship.operating-cost'}}</label>
+                </div>
+
+                <!-- Empty-->
+                <div class="flex flex-col items-center text-center"></div>
+
+                <!-- Empty-->
+                <div class="flex flex-col items-center text-center"></div>
+
+                <!-- Empty-->
+                <div class="flex flex-col items-center text-center"></div>
+
+              </div>
+
             </div>
           </div> <!-- end cost-->
           <!-- Cargo tab -->
