adding ammo and ab to ship weapon

--- a/src/templates/items/shipWeapon-sheet.html
+++ b/src/templates/items/shipWeapon-sheet.html
@@ -41,6 +41,14 @@
         type="text"  name="data.qualities" value="{{data.data.qualities}}" />
     </div>
 
+    <!-- ab -->
+    <div class="flex flex-col items-center">
+      {{localize 'swnr.sheet.attack-bonus'}}:
+      <input
+        class="w-32 text-center px-1.5 py-3 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+        type="number" step="1" data-dtype="Number" name="data.ab" value="{{data.data.ab}}" />
+    </div>
+
     <div class="flex flex-wrap gap-1">
       <h3 class="text-base w-full">{{localize 'swnr.weapon.ammo'}}:</h3>
       <div>
