--- a/src/templates/actors/drone-sheet.html
+++ b/src/templates/actors/drone-sheet.html
@@ -198,15 +198,15 @@
             <div class=" fittings pr-0.5">
               {{>
               "systems/swnr/templates/actors/fragments/vehicle-weapon-table.html"
-              type=actor.data.data.type actor=actor
+              type=actor.type actor=actor
               }}
               {{>
               "systems/swnr/templates/actors/fragments/vehicle-fitting-table.html"
-              type=actor.data.data.type actor=actor
+              type=actor.type actor=actor
               }}
               {{>
               "systems/swnr/templates/actors/fragments/vehicle-defense-table.html"
-              type=actor.data.data.type actor=actor
+              type=actor.type actor=actor
               }}
             </div> <!-- end fitting left col -->
             <div class="flex flex-col">
