--- a/src/templates/actors/npc-sheet.html
+++ b/src/templates/actors/npc-sheet.html
@@ -318,7 +318,7 @@
         {{#each itemTypes.weapon as |i|}} {{>
         "systems/swnr/templates/actors/fragments/weapon.html" item=i actor=actor
         damageBonus=actor.data.data.attacks.bonusDamage hitBonus=data.data.ab
-        type=actor.data.data.type}} {{/each}}
+        type=actor.type}} {{/each}}
       </ul>
     </div>
     <div class="flex flex-col flex-grow gap-1">
@@ -326,7 +326,7 @@
       <ul class="flex flex-col gap-0.5">
         {{#each abilities}} {{> (concat
         "systems/swnr/templates/actors/fragments/" (concat this.type '.html'))
-        item=this type=actor.data.data.type }} {{/each}}
+        item=this type=actor.type }} {{/each}}
       </ul>
     </div>
     <div class="flex flex-col flex-grow gap-1">
@@ -334,7 +334,7 @@
       <ul class="flex flex-col gap-0.5">
         {{#each equipment}} {{>
         "systems/swnr/templates/actors/fragments/item.html" item=this
-        type=actor.data.data.type }} {{/each}}
+        type=actor.type }} {{/each}}
       </ul>
     </div>
   </div>
