--- a/src/templates/actors/npc-sheet.html
+++ b/src/templates/actors/npc-sheet.html
@@ -65,7 +65,7 @@
           class="hidden sm:block col-span-2 border px-1 border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
           name="data.faction"
           value="{{actor.data.data.faction}}"
-          placeholder="{{localize 'swnr.sheet.faction'}}"
+          placeholder="{{localize 'swnr.sheet.factionname'}}"
           type="text"
         />
       </div>
