--- a/src/templates/actors/faction-sheet.html
+++ b/src/templates/actors/faction-sheet.html
@@ -20,19 +20,17 @@
     </div>
     <div class="flex-grow flexrow">
       <!--HP-->
-      <div class="hp flex flex-col justify-center items-center">
+      <div class="flex flex-col items-center p-2">
         <div class="border border-gray-800 bg-gray-400 mx-auto rounded-md">
           <input
-            class="w-8 text-right pl-1.5 py-3.5 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+            class="w-8 text-right pl-1.5  bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
             type="number" step="1" name="data.health.value" value="{{actor.data.data.health.value}}" data-dtype="Number"
             min="0" /><span>/</span><input
-            class="w-8 text-left pr-1.5 py-3.5 bg-opacity-75 bg-gray-400 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+            class="w-8 text-left pr-1.5 bg-opacity-75 bg-gray-400 placeholder-blue-800 placeholder-opacity-75 rounded-md"
             type="number" name="data.health.max" value="{{actor.data.data.health.max}}" step="1" min="1"
             data-dtype="Number" />
         </div>
-        <label class="hp-label hover:text-shadow hover:text-shadow-blueGray-600 cursor-pointer transition-text-shadow">
-          {{localize 'swnr.sheet.hp'}}
-        </label>
+        <div>{{localize 'swnr.sheet.hp'}}</div>
       </div>
 
       <!-- force -->
@@ -86,12 +84,13 @@
         </select>
         <div>{{localize 'swnr.sheet.faction.wealthRating'}}</div>
       </div>
+      {{!--
     </div>
-    <div class="flexrow flex-grow">
+    <div class="flexrow flex-grow"> --}}
       <!-- facCreds -->
       <div class="flex flex-col items-center p-2">
         <input
-          class="w-32 text-center px-1.5 py-3 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+          class="w-8 text-center px-1.5  border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
           type="number" step="1" data-dtype="Number" name="data.facCreds" value="{{data.data.facCreds}}" />
         <div>{{localize 'swnr.sheet.faction.facCreds'}}</div>
       </div>
@@ -99,7 +98,7 @@
       <!-- xp -->
       <div class="flex flex-col items-center p-2">
         <input
-          class="w-32 text-center px-1.5 py-3 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+          class="w-8 text-center px-1.5  border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
           type="number" step="1" data-dtype="Number" name="data.xp" value="{{data.data.xp}}" />
         <div>{{localize 'swnr.sheet.faction.xp'}}</div>
       </div>
@@ -107,28 +106,57 @@
       <!-- homeworld -->
       <div class="flex flex-col items-center p-2">
         <input
-          class="w-32 text-center px-1.5 py-3 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
+          class="w-32 text-center px-1.5 py-1 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md"
           name="data.homeworld" value="{{data.data.homeworld}}" />
         <div>{{localize 'swnr.sheet.faction.homeworld'}}</div>
       </div>
     </div>
     <div class="flexrow flex-grow">
-
-      <!-- table-->
-      <li class="item-titles flexrow">
-        <!--<div class="item-caret"><!--<i class="fas fa-caret-down"></i></div>-->
-        <div class="item-name ml-5">Cunning Assets </div>
-        <div class="text-center"> {{ localize 'swnr.item.enc' }} </div>
-        {{#if (eq itemType "item")}}
-        <div class="text-center"> {{ localize 'swnr.item.qty' }} </div>
-        {{/if}}
-        <div class=""> {{ localize 'swnr.item.location' }} </div>
-        <div class="item-controls flex-shrink text-right">
-          <a class="item-control item-create text-gray-100 hover:text-green-400 transition-colors"
-            title="{{localize 'swnr.sheet.add-item'}}" data-item-type="{{ itemType }}" data-item-name="{{ name }}">
-            <i class="fas fa-plus"></i>
-          </a>
-        </div>
-      </li>
+      <div>
+        <!-- table-->
+        <li class="item-titles flexrow">
+          <!--<div class="item-caret"><!--<i class="fas fa-caret-down"></i></div>-->
+          <div class="item-name ml-5">Cunning Assets </div>
+          <div class="text-center"> {{ localize 'swnr.sheet.faction.rating' }} </div>
+          <div class=""> {{ localize 'swnr.sheet.faction.assetType' }} </div>
+          <div class=""> {{ localize 'swnr.sheet.faction.attackTarget' }} /  {{ localize 'swnr.sheet.faction.attackDamage' }} </div>
+          <div class="item-controls flex-shrink text-right">
+            <a class="item-control item-create text-gray-100 hover:text-green-400 transition-colors"
+              title="{{localize 'swnr.sheet.add-item'}}" data-item-type="{{ itemType }}" data-item-name="{{ name }}">
+              <i class="fas fa-plus"></i>
+            </a>
+          </div>
+        </li>
+        <ol class="item-list">
+          {{#each data.data.cunningAssets as |item id|}}
+          <li class="item-entry">
+            <div class="item flexrow py-3.0" data-item-id="{{item.id}}">
+              <div class="item-image" style="background-image: url({{item.img}})"><a></a></div>
+              <div class="item-name item-click item-rollable flexrow pr-2.0">
+                <a>{{item.name}}</a>
+              </div>
+              <div>
+                {{ item.data.data.rating }}
+              </div>
+              <div>
+                {{ item.data.data.assetType }}
+              </div>
+              <div>
+                {{ item.data.data.attackTarget }} /
+                {{ item.data.data.attackDamage }}
+              </div>
+              <div class="item-controls text-right flex-shrink">
+                <a class="item-control item-edit text-gray-600 hover:text-purple-800 transition-colors"
+                  title='{{localize ' swnr.sheet.edit-item'}}'>
+                  <i class="fas fa-edit"></i></a>
+                <a class="item-control item-delete text-gray-600 hover:text-red-600 transition-colors"
+                  title='{{localize ' swnr.sheet.delete-item'}}'>
+                  <i class="fas fa-trash"></i></a>
+              </div>
+            </div>
+          </li>
+          {{/each}}
+        </ol>
+      </div>
     </div>
 </form>
