tabs on faction

--- a/src/swnr.pcss
+++ b/src/swnr.pcss
@@ -28,9 +28,14 @@ a:hover {
   @apply text-shadow-gray-600;
 }
 
-li.item-entry
- {
-  padding-bottom:5px;
+.item-entry
+{
+  @apply  py-0.5 pb-2 ;
+}
+
+.small-cell {
+  max-width:60px;
+  @apply px-2;
 }
 
 div.editor .editor-content{
